<resources>
    <string name="app_name">Custom Pig Latin</string>
    <string name="editing_mode">Edit Mode</string>
    <string name="code_maker_label">Custom Pig Latin</string>
    <string name="end_phrase">Ending Suffix</string>
    <string name="example_ay">Enter a suffix; like \"ay\"</string>
    <string name="starting_cut">Number of Letters Moved to End</string>
    <string name="word_in_pyg_latin_hint">"Word in PygLatin"</string>
    <string name="word_in_other_language">"Encoded phrase"</string>
    <string name="your_words_in_pyglatin">Enter word or phrase</string>
    <string name="pig_latin_translator">PigLatin Translator</string>
    <string name="pig_latin_detranslator">PigLatin Detranslator</string>
    <string name="title_activity_custom_latin">CustomLatin</string>
    <string name="copy">Copy</string>
    <string name="translation_copied">"Translation copied to clipboard!"</string>
    <string name="you_cant_copy">"You can't copy yet. You haven't entered anything."</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="share">Share</string>
    <string name="share_using">Share using&#8230;</string>
    <string name="pig">Pig</string>
    <string name="man">Man</string>
    <string name="use_detranslator">Decoder</string>
    <string name="use_translator">Encoder</string>
    <string name="share_app">Share PigLatin Translator</string>
    <string name="get_pig_latin_translator_share">Hey! You should get PigLatin Translator by An3Enterprises.</string>
    <string name="make_own_language">Make your own custom pig latin language</string>
    <string name="edit_mode_title">Editing Mode</string>
    <string name="editing_mode_switch">Editing Mode On</string>
    <string name="editing_mode_switch_off">Editing Mode Off</string>
    <string name="preview">This is a preview sentence.</string>
    <string name="your_words">Your words</string>
    <string name="addedWordHint">Put a word you want in your code here.</string>
    <string name="paste">Paste</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Okay</string>
    <string name="leave_pig_latin_translator">Exit PigLatin Translator?</string>
    <string name="are_you_sure_want_to_leave">Are you sure you want to exit PigLatin Translator?</string>
    <string name="done">Save And Start Translating</string>
    <string name="add_suffix_num">Do not add suffix to numbers</string>
    <string name="transpose_num">Do not move numbers</string>
    <string name="more_info">Help</string>
    <string name="please_no_special_symbols">Please do not use any special symbols other than punctuation.</string>
    <string name="detranslation">Decoded phrase</string>
    <string name="go_to_edit_mode">Go To Edit Mode</string>
    <string name="cant_load_string">Oops&#8230; Your previous text could not be loaded.</string>
    <string name="speak">Speak</string>
    <string name="extras">Extras</string>
    <string name="save_share_friends">Share Your Code\nWith Friends</string>
    <string name="invitation">"Install Custom Pig Latin at https://play.google.com/store/apps/details?id=an3enterprises.custompiglatin. Tap on the three dot menu at the top right of the screen. Select "Enter Shared Code". Then type in the following code: "</string>
    <string name="app_url">https://play.google.com/store/apps/details?id=an3enterprises.custompiglatin</string>
    <string name="enter_code">Enter Shared Code</string>
    <string name="done_alert_dialog">Done</string>
    <string name="shared_code_hint">Please enter code precisely</string>
    <string name="invalid_shared_code">Your shared code is invalid. Please double check you\'re typing it right.</string>
    <string name="shared_code_loaded">Your new code was loaded!</string>
    <string name="shared_code_message">Enter the code your friend sent you.
        When you enter the code, you\'ll be able to decode his messages!</string>
    <string name="welcome_message">Welcome to Custom Pig Latin!</string>
    <string name="subtitle_welcome_message">With Custom Pig Latin, you can easily make a secret coded
        language that nobody but you and your friends will know.</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>
    <string name="suffix_info_title">Start With a Suffix</string>
    <string name="suffix_info_subtitle">A suffix is a letter or group of letters that is added to the end of every word.</string>
    <string name="play_tutorial">Play Video</string>
    <string name="use_app">Start Editing</string>
    <string name="suffix_title">The Ending Suffix</string>
    <string name="suffix_explanation">The Ending Suffix is the letter or group of letters that is added to every word you type in the Encoder.\n\nExample:\n\n If \"ay\" is the Ending Suffix\n\n \"Hello!\" ⟶ \"Helloay!\"</string>
    <string name="letters_to_end_title">Number of Letters Moved to End</string>
    <string name="letters_to_end_explanation">Number of Letters Moved to End is how many letters are moved from the beginning of every word to the end.\n\nExample:\n\n If Number of Letters Moved To End is 1\n\n \"Hello!\" ⟶ \"Elloh!\".</string>
    <string name="no_suffix_to_num_title">Do Not Add Suffix to Numbers Checkbox</string>
    <string name="no_suffix_to_num_explanation">If you uncheck the \"Do not add suffix to numbers\" checkbox, then the Ending Suffix will be added to the end of numbers.\n\nExample:\n\n If Number of Letters Moved to End is 0 and the Ending Suffix is \"ay\"\n\n\"I have 1 dog.\" ⟶ \"Iay haveay 1ay dogay.\"</string>
    <string name="no_move_num_title">Do Not Move Numbers Checkbox</string>
    <string name="no_move_num_explanation">If you uncheck the \"Do Not Move Numbers\" checkbox, then the first digits of a number will be transposed to the end depending on the Number of Letters Moved to End.\n\nExample:\n\nIf Number of Letters Moved to End is 1.\n\n \"I was born in 1990.\" ⟶ \"I asw ornb ni 9901.\"</string>

    <string name="info_and_tips">Information</string>
    <string name="back">Back</string>
</resources>
