<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <ImageView
        android:id="@+id/info_image"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/code_maker_label"
        android:cropToPadding="false"
        android:src="@drawable/ending_suffix_example"
        android:layout_above="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="74dp" />

    <TextView
        android:id="@+id/title_info_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/suffix_info_title"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suffix_info_subtitle"
        android:textColor="#787878"
        android:gravity="center"
        android:id="@+id/subtitle_info_tips"
        android:layout_below="@+id/title_info_tips"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="33dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/next_button"
        android:background="#000"
        android:textColor="#FFF"
        android:onClick="goToNext"
        android:id="@+id/button2" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#000"
        android:textColor="#FFF"
        android:onClick="goBack"
        android:id="@+id/previous_btn"
        android:enabled="true"/>


</RelativeLayout>
