<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="an3enterprises.piglatincustomlatintranslator.MainActivity"
            android:orientation="vertical"
            android:id="@+id/linearLayoutDetranslator"
            android:layout_marginTop="16dp"
            android:layout_alignParentTop="true">

            <EditText
                android:id="@+id/inputDetranslator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/your_words_in_pyglatin"
                android:textColor="#000"
                android:textSize="30sp"
                android:padding="8dp"
                android:background="@drawable/back"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" />

            <TextView
                android:id="@+id/outputDetranslator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:hint="@string/detranslation"
                android:background="@drawable/back"
                android:textColor="#000"
                android:padding="8dp"
                android:enabled="true"
                android:textIsSelectable="true"
                android:focusable="true"
                android:longClickable="true"
                android:layout_margin="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:id="@+id/button_bar_detranslator">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/copy"
                    android:onClick="copyTranslation"
                    android:layout_gravity="center" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    android:onClick="onShareClicked"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paste"
                    android:onClick="pasteTranslation"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textAllCaps="true"
                    android:text="@string/go_to_edit_mode"
                    android:background="#000"
                    android:textColor="#FFF"
                    android:onClick="goToEditMode"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/use_translator"
                    android:onClick="goToTranslator"
                    android:layout_margin="16dp"
                    android:id="@+id/useTranslator"
                    android:enabled="true"
                    android:layout_weight="1"
                    android:background="#000"
                    android:textColor="#FFF"/>


            </LinearLayout>



        </LinearLayout>

    </RelativeLayout>

</ScrollView>

