<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="an3enterprises.codemaker.EditingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/editingModeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/editing_mode"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example_sample"
            android:layout_margin="16dp"
            android:padding="16dp"
            android:background="@drawable/back"
            android:clickable="false"
            android:textColor="#000"
            android:textStyle="bold"
            android:id="@+id/preview_text_view"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_phrase"
            android:textColor="#000"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

            <EditText
                android:id="@+id/end_phrase_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/example_ay"
                android:maxLines="1"
                android:layout_margin="16dp"
                android:inputType="text"
                android:imeOptions="actionDone"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/starting_cut"
            android:textColor="#000"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <SeekBar
            android:id="@+id/letters_cut_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:max="5" />



        <TextView
            android:id="@+id/seek_bar_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:gravity="center_horizontal"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="0"/>



        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:background="@color/black"
            android:text="@string/done"
            android:textColor="#FFF"
            android:onClick="goToCodeMakingActivity"/>


    </LinearLayout>


</ScrollView>
